--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <!-- NAVBAR  -->
-      <nav class="navbar">
+      <nav class="navbar center-nav">
         <div class="navbar-left">
           <a href="/">
             <div class="logo">
