--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <!-- NAVBAR  -->
-      <nav class="navbar">
+      <nav class="navbar center-nav">
         <div class="navbar-left">
           <a href="/">
             <div class="logo">
@@ -34,11 +34,44 @@
       </nav>
 
       <!-- PAGE CONTENT  -->
-      <div class="contact">
-        <h2>Contact</h2>
-        <div class="contact-content"></div>
+      <div class="contact center-box">
+        <h2 class="contact-heading">Contact</h2>
+        <p class="contact-lead">Looking forward to hearing from you</p>
+        <div class="contact-content">
+          <!-- <div class="contact-group"> -->
+          <div class="endpoint phone">
+            <a href="tel:+4915124458501">
+              <!-- <h4 class="phone-heading">Phone</h4> -->
+              <!-- <p class="phone-number">+4915124458501</p> -->
+              <i class="fa fa-mobile fa-4x" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="endpoint email">
+            <a href="mailto:dusan.chmelko@yahoo.com">
+              <!-- <h4 class="email-heading">Email</h4> -->
+              <!-- <p class="email-address">dusan.chmelko@yahoo.com</p> -->
+              <!-- <i class="fa fa-envelope fa-4x" aria-hidden="true"></i> -->
+              <i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i>
+            </a>
+          </div>
+          <!-- </div> -->
+          <div class="endpoint ghub">
+            <a href="#">
+              <!-- <h4 class="github-heading">GitHub</h4>
+              <p class="github-account">icon</p> -->
+              <i class="fa fa-github fa-4x" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="endpoint linked">
+            <a href="#">
+              <!-- <h4 class="linkedin-heading">LinkedIn</h4>
+              <p class="linkedin-account">icon</p> -->
+              <i class="fa fa-linkedin fa-4x linkedin" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
-
+      <!-- dusan.chmelko@gmail.com -->
       <!-- FOOTER  -->
       <footer class="footer">
         <a
