--- a/pages/resume.html
+++ b/pages/resume.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <!-- NAVBAR -->
-      <nav class="navbar">
+      <nav class="navbar center-nav">
         <div class="navbar-left">
           <a href="/">
             <div class="logo">
@@ -34,107 +34,126 @@
       </nav>
 
       <!-- PAGE CONTENT -->
-      <div class="resume">
-        <h2 class="resume-heading">Resume</h2>
-        <div class="resume-content">
-          <section class="section education">
-            <h4 class="section-heading">Education</h4>
-            <div class="section-articles">
-              <article class="article">
-                <p class="timespan">October 2020 - September 2021</p>
-                <div class="content">
-                  <h5 class="content-heading">Full-stack Web Development</h5>
-                  <p class="content-subheading">
-                    Digital Career Institute, Berlin
-                  </p>
-                  <ul class="content-points">
-                    <li>
-                      Intensive, certified one-year project based education
-                    </li>
-                    <li>HTML, CSS, SASS, Bootstrap, Version control (Git)</li>
-                    <li>JavaScript, DOM API, SPA, React, Redux</li>
-                    <li>NodeJS, Express, REST API, MongoDB, Mongoose</li>
-                    <li>German lessons as part of the course (Level B2)</li>
-                  </ul>
-                </div>
-              </article>
-              <article class="article">
-                <p class="timespan">September 2003 - May 2009</p>
-                <div class="content">
-                  <h5 class="content-heading">
-                    International Relations - Master's degree
-                  </h5>
-                  <p class="content-subheading">
-                    University of Economics, Bratislava
-                  </p>
-                  <ul class="content-points">
-                    <li>Faculty of International Relations</li>
-                    <li>
-                      Relations in world politics, international organisations,
-                      institutions, law and security
-                    </li>
-                    <li>
-                      International economic relations, development, finances,
-                      trade, marketing and logistics
-                    </li>
-                    <li>
-                      European political and economic integration studies,
-                      institutions and law of European Union
-                    </li>
-                  </ul>
-                </div>
-              </article>
-            </div>
-          </section>
-          <section class="section experience">
-            <h4 class="section-heading">Work Experience</h4>
-            <div class="section-articles">
-              <article class="article">
-                <p class="timespan">November 2020 - September 2021</p>
-                <div class="content">
-                  <h5 class="content-heading">Tutor (Web Development)</h5>
-                  <p class="content-subheading">
-                    Digital Career Institute, Berlin
-                  </p>
-                  <ul class="content-points">
-                    <li>
-                      Part-time position during the one-year course at DCI
-                    </li>
-                    <li>Group and private Web Development tutoring sessions</li>
-                    <li>
-                      Sharing knowledge and transmitting it to fellow students
-                      and supporting them during their course
-                    </li>
-                    <li>
-                      Working with lecturers to improve learning experience
-                    </li>
-                  </ul>
-                  <p class="experience-statement">
-                    In the past I had worked in various customer service and
-                    managing roles in the UK, Spain, Slovakia and Germany.
-                  </p>
-                </div>
-              </article>
-            </div>
-          </section>
-          <section class="section skills">
-            <h4 class="section-heading">Technical Skills</h4>
-            <div class="section-articles">
-              <article class="article">
-                <p class="timespan"></p>
-                <div class="content">
-                  <ul class="content-points">
-                    <li>HTML, CSS/SASS, JavaScript​</li>
-                    <li>React, Context API, Redux</li>
-                    <li>Node.js, Express.js, EJS</li>
-                    <li>MongoDB, Mongoose</li>
-                    <li>Bootstrap, Semantic UI, Material UI</li>
-                    <li>Git, GitHub, NPM</li>
-                  </ul>
-                </div>
-              </article>
-            </div>
-          </section>
+      <div class="center-box">
+        <div class="resume">
+          <h2 class="resume-heading">Resume</h2>
+          <div class="resume-content">
+            <!-- SECTION  -->
+            <section class="section my-name">
+              <h4 class="section-heading">Name</h4>
+              <div class="section-articles">
+                <article class="article">
+                  <div class="timespan"></div>
+                  <div class="content">
+                    <h4 class="content-heading">Dusan Chmelko</h4>
+                  </div>
+                </article>
+              </div>
+            </section>
+            <!-- SECTION  -->
+            <section class="section education">
+              <h4 class="section-heading">Education</h4>
+              <div class="section-articles">
+                <article class="article">
+                  <p class="timespan">October 2020 - September 2021</p>
+                  <div class="content">
+                    <h5 class="content-heading">Full-stack Web Development</h5>
+                    <p class="content-subheading">
+                      Digital Career Institute, Berlin
+                    </p>
+                    <ul class="content-points">
+                      <li>
+                        Intensive, certified one-year project based education
+                      </li>
+                      <li>HTML, CSS, SASS, Bootstrap, Version control (Git)</li>
+                      <li>JavaScript, DOM API, SPA, React, Redux</li>
+                      <li>NodeJS, Express, REST API, MongoDB, Mongoose</li>
+                      <li>German lessons as part of the course (Level B2)</li>
+                    </ul>
+                  </div>
+                </article>
+                <article class="article">
+                  <p class="timespan">September 2003 - May 2009</p>
+                  <div class="content">
+                    <h5 class="content-heading">
+                      International Relations - Master's degree
+                    </h5>
+                    <p class="content-subheading">
+                      University of Economics, Bratislava
+                    </p>
+                    <ul class="content-points">
+                      <li>Faculty of International Relations</li>
+                      <li>
+                        Relations in world politics, international
+                        organisations, institutions, law and security
+                      </li>
+                      <li>
+                        International economic relations, development, finances,
+                        trade, marketing and logistics
+                      </li>
+                      <li>
+                        European political and economic integration studies,
+                        institutions and law of European Union
+                      </li>
+                    </ul>
+                  </div>
+                </article>
+              </div>
+            </section>
+            <!-- SECTION  -->
+            <section class="section experience">
+              <h4 class="section-heading">Work Experience</h4>
+              <div class="section-articles">
+                <article class="article">
+                  <p class="timespan">November 2020 - September 2021</p>
+                  <div class="content">
+                    <h5 class="content-heading">Tutor (Web Development)</h5>
+                    <p class="content-subheading">
+                      Digital Career Institute, Berlin
+                    </p>
+                    <ul class="content-points">
+                      <li>
+                        Part-time position during the one-year course at DCI
+                      </li>
+                      <li>
+                        Group and private Web Development tutoring sessions
+                      </li>
+                      <li>
+                        Sharing knowledge and transmitting it to fellow students
+                        and supporting them during their course
+                      </li>
+                      <li>
+                        Working with lecturers to improve learning experience
+                      </li>
+                    </ul>
+                    <p class="experience-statement">
+                      In the past I had worked in various customer service and
+                      managing roles in the UK, Spain, Slovakia and Germany.
+                    </p>
+                  </div>
+                </article>
+              </div>
+            </section>
+            <!-- SECTION  -->
+            <section class="section skills">
+              <h4 class="section-heading">Technical Skills</h4>
+              <div class="section-articles">
+                <article class="article">
+                  <p class="timespan"></p>
+                  <div class="content">
+                    <ul class="content-points">
+                      <li>HTML, CSS/SASS, JavaScript​</li>
+                      <li>React, Context API, Redux</li>
+                      <li>Node.js, Express.js, EJS</li>
+                      <li>MongoDB, Mongoose</li>
+                      <li>Bootstrap, Semantic UI, Material UI</li>
+                      <li>Git, GitHub, NPM</li>
+                    </ul>
+                  </div>
+                </article>
+              </div>
+            </section>
+          </div>
         </div>
       </div>
 
