trying fix gitignore

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <h1 class="heading">Hello</h1>
             <h4 class="sub-heading">My name is Dusan Chmelko</h4>
             <p class="hero-paragraph">
-              I am a Web Developer graduating a one-year intensive training in
-              MERN based Full-stack Web Development. I am interested in projects
-              allowing me to strengthen my knowledge and skills as well as to
-              learn new ones.
+              I am a Berlin-based Web Developer graduating a one-year intensive
+              training in MERN-focused Full-stack Web Development. I am
+              interested in projects allowing me to strengthen my knowledge and
+              skills as well as to learn new ones.
             </p>
           </div>
           <div class="buttons-box">
