--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,14 +56,14 @@
           </div>
           <!-- </div> -->
           <div class="endpoint ghub">
-            <a href="#">
+            <a href="https://github.com/osmonoh">
               <!-- <h4 class="github-heading">GitHub</h4>
               <p class="github-account">icon</p> -->
               <i class="fa fa-github fa-4x" aria-hidden="true"></i>
             </a>
           </div>
           <div class="endpoint linked">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/dusan-chmelko/">
               <!-- <h4 class="linkedin-heading">LinkedIn</h4>
               <p class="linkedin-account">icon</p> -->
               <i class="fa fa-linkedin fa-4x linkedin" aria-hidden="true"></i>
@@ -72,6 +72,7 @@
         </div>
       </div>
       <!-- dusan.chmelko@gmail.com -->
+
       <!-- FOOTER  -->
       <footer class="footer">
         <a
