--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,7 +16,8 @@
         <div class="navbar-left">
           <a href="/">
             <div class="logo">
-              <i class="fa fa-code fa-lg" aria-hidden="true"></i>
+              <!-- <i class="fa fa-code fa-lg" aria-hidden="true"></i> -->
+              &lt;&#47;&gt;
             </div>
           </a>
           <a href="/">
@@ -61,12 +62,13 @@
                   href="https://github.com/osmonoh/react-video-platform"
                   target="_blank"
                   >code</a
-                ><a
+                >
+                <!-- <a
                   class="btn-project btn-website"
                   href="https://watch-video-app.netlify.app/"
                   target="_blank"
                   >website</a
-                >
+                > -->
               </div>
               <div class="project-image">
                 <a href="https://watch-video-app.netlify.app/" target="_blank"
@@ -96,12 +98,13 @@
                   href="https://github.com/osmonoh/rest-api"
                   target="_blank"
                   >code</a
-                ><a
+                >
+                <!-- <a
                   class="btn-project btn-website"
                   href="https://decentapi.herokuapp.com/"
                   target="_blank"
                   >website</a
-                >
+                > -->
               </div>
               <div class="project-image">
                 <a href="https://decentapi.herokuapp.com/" target="_blank"
@@ -131,12 +134,13 @@
                   href="https://github.com/osmonoh/bulls-and-cows"
                   target="_blank"
                   >code</a
-                ><a
+                >
+                <!-- <a
                   class="btn-project btn-website"
                   href="https://bulls-cows.netlify.app/"
                   target="_blank"
                   >website</a
-                >
+                > -->
               </div>
               <div class="project-image">
                 <a href="https://bulls-cows.netlify.app/" target="_blank"
