--- a/pages/resume.html
+++ b/pages/resume.html
@@ -36,7 +36,12 @@
       <!-- PAGE CONTENT -->
       <div class="center-box">
         <div class="resume">
-          <h2 class="resume-heading">Resume</h2>
+          <div class="resume-top">
+            <h2 class="resume-top-heading">Resume</h2>
+            <a class="btn-download" href="../docs/CV_Dusan_Chmelko.pdf" download
+              ><i class="fa fa-download fa-lg" aria-hidden="true"></i
+            ></a>
+          </div>
           <div class="resume-content">
             <!-- SECTION  -->
             <section class="section my-name">
