--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,6 +61,7 @@
                   class="btn-project btn-code"
                   href="https://github.com/osmonoh/react-video-platform"
                   target="_blank"
+                  title="See code on GitHub"
                   >code</a
                 >
                 <!-- <a
@@ -71,7 +72,10 @@
                 > -->
               </div>
               <div class="project-image">
-                <a href="https://watch-video-app.netlify.app/" target="_blank"
+                <a
+                  href="https://watch-video-app.netlify.app/"
+                  target="_blank"
+                  title="Go to website"
                   ><img src="../images/watch-home.png" alt="video platform"
                 /></a>
               </div>
@@ -97,6 +101,7 @@
                   class="btn-project btn-code"
                   href="https://github.com/osmonoh/rest-api"
                   target="_blank"
+                  title="See code on GitHub"
                   >code</a
                 >
                 <!-- <a
@@ -107,7 +112,10 @@
                 > -->
               </div>
               <div class="project-image">
-                <a href="https://decentapi.herokuapp.com/" target="_blank"
+                <a
+                  href="https://decentapi.herokuapp.com/"
+                  target="_blank"
+                  title="Go to website"
                   ><img src="../images/decent-home.png" alt="rest api"
                 /></a>
               </div>
@@ -133,6 +141,7 @@
                   class="btn-project btn-code"
                   href="https://github.com/osmonoh/bulls-and-cows"
                   target="_blank"
+                  title="See code on GitHub"
                   >code</a
                 >
                 <!-- <a
@@ -143,7 +152,10 @@
                 > -->
               </div>
               <div class="project-image">
-                <a href="https://bulls-cows.netlify.app/" target="_blank"
+                <a
+                  href="https://bulls-cows.netlify.app/"
+                  target="_blank"
+                  title="Go to website"
                   ><img src="../images/bulls.png" alt="logic game"
                 /></a>
               </div>
