--- a/pages/resume.html
+++ b/pages/resume.html
@@ -38,7 +38,11 @@
         <div class="resume">
           <div class="resume-top">
             <h2 class="resume-top-heading">Resume</h2>
-            <a class="btn-download" href="../docs/CV_Dusan_Chmelko.pdf" download
+            <a
+              class="btn-download"
+              href="../docs/CV_Dusan_Chmelko.pdf"
+              download
+              title="Download CV"
               ><i class="fa fa-download fa-lg" aria-hidden="true"></i
             ></a>
           </div>
