--- a/pages/projects.html
+++ b/pages/projects.html
@@ -85,8 +85,8 @@
               <div class="project-text">
                 <h4 class="project-text-heading">Rest API</h4>
                 <p class="project-text-proper">
-                  This is my first backend project where I created a small REST
-                  API with frontend page introducing the API, offering some
+                  This is my backend project where I created a small REST API
+                  with frontend page introducing the API, offering some
                   interactive examples of requests and responses, as well as
                   documentation. Its name is decentAPI and it is deployed on
                   Heroku. These are some of the technologies and approaches
