--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,20 +56,24 @@
           </div>
           <!-- </div> -->
           <div class="endpoint ghub">
-            <a href="https://github.com/osmonoh">
+            <a href="https://github.com/osmonoh" target="_blank">
               <!-- <h4 class="github-heading">GitHub</h4>
               <p class="github-account">icon</p> -->
               <i class="fa fa-github fa-4x" aria-hidden="true"></i>
             </a>
           </div>
           <div class="endpoint linked">
-            <a href="https://www.linkedin.com/in/dusan-chmelko/">
+            <a
+              href="https://www.linkedin.com/in/dusan-chmelko/"
+              target="_blank"
+            >
               <!-- <h4 class="linkedin-heading">LinkedIn</h4>
               <p class="linkedin-account">icon</p> -->
               <i class="fa fa-linkedin fa-4x linkedin" aria-hidden="true"></i>
             </a>
           </div>
         </div>
+        <!-- <p class="contact-lead">Looking forward to hearing from you</p> -->
       </div>
       <!-- dusan.chmelko@gmail.com -->
 
