--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
                   href="https://github.com/osmonoh/react-video-platform"
                   target="_blank"
                   title="See code on GitHub"
-                  >code</a
+                  ><p>code</p></a
                 >
                 <!-- <a
                   class="btn-project btn-website"
@@ -102,7 +102,7 @@
                   href="https://github.com/osmonoh/rest-api"
                   target="_blank"
                   title="See code on GitHub"
-                  >code</a
+                  ><p>code</p></a
                 >
                 <!-- <a
                   class="btn-project btn-website"
@@ -142,7 +142,7 @@
                   href="https://github.com/osmonoh/bulls-and-cows"
                   target="_blank"
                   title="See code on GitHub"
-                  >code</a
+                  ><p>code</p></a
                 >
                 <!-- <a
                   class="btn-project btn-website"
