--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@
       <!-- PAGE CONTENT  -->
       <div class="contact center-box">
         <h2 class="contact-heading">Contact</h2>
-        <p class="contact-lead">Looking forward to hearing from you</p>
+        <p class="contact-lead">Looking forward to hearing from you.</p>
         <div class="contact-content">
           <!-- <div class="contact-group"> -->
           <div class="endpoint phone">
