--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="hero">
         <div class="hero-content">
           <div class="hero-text">
-            <h1 class="heading">Hello</h1>
+            <h1 class="heading">Hi</h1>
             <h4 class="sub-heading">My name is Dusan Chmelko</h4>
             <p class="hero-paragraph">
               I am a Berlin-based Web Developer graduating a one-year intensive
