add team project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -160,6 +160,61 @@
                 /></a>
               </div>
             </article>
+            <!-- TEAM PROJECTS  -->
+            <h3 class="team-heading">Team project</h3>
+            <!-- PROJECT 4  -->
+            <article class="project">
+              <div class="project-text">
+                <h4 class="project-text-heading">Pet adoption platform</h4>
+                <div class="project-text-proper">
+                  <p>
+                    This is a group full-stack project of five people. We
+                    created a platform where a person offering a pet can connect
+                    with a person who wants to adopt one smooth, easy and fast.
+                    Users can chat in real-time. This is a full-stack project:
+                  </p>
+                  <p>
+                    The UI is build with React, with Context API for state
+                    management. For styling we used SCSS and Material UI,
+                    Chat-Engine to create the chat. It is deployed on Netlify.
+                  </p>
+                  <p class="project-text-keywords">
+                    React, Context API, SCSS, Chat Engine, Material UI
+                  </p>
+                  <p>
+                    The server is built with Node.js, using the Express.js. We
+                    used MongoDB and Mongoose for database, stored on MongoDB
+                    Atlas. The server is deployed on Heroku.
+                  </p>
+                  <p class="project-text-keywords">
+                    Node.js, Express.js, MongoDB, Mongoose, MongoDB Atlas
+                  </p>
+                </div>
+              </div>
+              <div class="project-buttons">
+                <a
+                  class="btn-project btn-code"
+                  href="https://github.com/osmonoh/pawfect-frontend"
+                  target="_blank"
+                  title="See code on GitHub"
+                  ><p>code</p></a
+                >
+                <!-- <a
+                  class="btn-project btn-website"
+                  href="https://bulls-cows.netlify.app/"
+                  target="_blank"
+                  >website</a
+                > -->
+              </div>
+              <div class="project-image">
+                <a
+                  href="https://pawfect.netlify.app/"
+                  target="_blank"
+                  title="Go to website"
+                  ><img src="../images/pawfect.png" alt="logic game"
+                /></a>
+              </div>
+            </article>
           </div>
         </div>
       </div>
