resume + navbar responsivve

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -49,7 +49,7 @@
           <div class="resume-content">
             <!-- SECTION  -->
             <section class="section my-name">
-              <h4 class="section-heading">Name</h4>
+              <h4 class="section-heading section-heading-name">Name</h4>
               <div class="section-articles">
                 <article class="article">
                   <div class="timespan"></div>
