--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navbar center-nav">
         <div class="navbar-left">
           <a href="/">
-            <div class="logo">
+            <div class="logo logo-current">
               <i class="fa fa-code fa-lg" aria-hidden="true"></i>
             </div>
           </a>
