--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,8 @@
         <div class="navbar-left">
           <a href="/">
             <div class="logo">
-              <i class="fa fa-code fa-lg" aria-hidden="true"></i>
+              <!-- <i class="fa fa-code fa-lg" aria-hidden="true"></i> -->
+              &lt;&#47;&gt;
             </div>
           </a>
           <a href="/">
